infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ann
  labels:
    app.kubernetes.io/part-of: ann
